# nx-j4f

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: test.yml
.github/workflows/: test.yml
nx_j4f/: __init__.py  interface.py
nx_j4f/algorithms/: __init__.py  isolate.py
