[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nx-j4f"
authors = [
    {name = "Aditi Juneja", email = ""},
]
description = "A Just for fun backend for NetworkX"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "networkx",
]
dynamic = ["version"]

[tool.hatch.version]
path = "nx_j4f/__init__.py"

[project.optional-dependencies]
developer = [
    'pre-commit',
]
test = [
    'pytest>=7.2',
    'numpy>=1.23', # Required by networkx tests
    'scipy>=1.9,!=1.11.0,!=1.11.1', # Required by networkx tests
]

[project.entry-points."networkx.backends"]
j4f = "nx_j4f.interface:BackendInterface"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 88
target-version = 'py310'

[tool.ruff.per-file-ignores]
"__init__.py" = ['I', 'F403']
